# membrane

./: .gitignore  README.md  package-lock.json  pyproject.toml
config/: agents.example.yaml  persona.example.yaml  persona.yaml  training_policy.example.yaml  training_policy.yaml
data/books/: books.json
data/datasets/coding/: README.md
data/datasets/personal_assistant/: README.md
data/datasets/summarization/: README.md
memory/examples/: preferences.json  profile.json
src/membrane/: __init__.py  __main__.py  cli.py  cli_config.py  config.py  config_integrations.py  config_paths.py  config_policy.py  config_store.py
src/membrane/api/: __init__.py  app.py
src/membrane/inference/: __init__.py  context.py  firecrawl.py  shell.py  shell_sandbox.py  websearch.py
src/membrane/ingest/: __init__.py  calendar.py  cursor.py  email.py  lifecycle.py  search.py  server_common.py  server_models.py  whatsapp.py  wikipedia.py
src/membrane/ingest/agents/: __init__.py  ingest.py  io.py  models.py  registry.py
src/membrane/ingest/agents/adapters/: base.py  claude_code.py  common.py  cursor.py  openai_chat.py
src/membrane/integrations/: credentials.py  oauth.py
src/membrane/learning/: __init__.py  chat_log.py  chat_memory.py  export.py  job.py  trainer.py
src/membrane/llm/: __init__.py  ollama.py
src/membrane/memory/: __init__.py  books.py  models.py  review.py  store.py
src/membrane/server/: __init__.py  app.py  auth.py  scheduler.py
src/membrane/shadow/: __init__.py  extractor.py  offline.py
src/membrane/tracking/: __init__.py  manifest.py  queue.py  stats.py
src/membrane/utils/: __init__.py  parallel.py  progress.py
src/shadow_pa/: __init__.py  __main__.py  cli.py  config.py  config_policy.py
src/shadow_pa/api/: __init__.py  app.py
src/shadow_pa/inference/: __init__.py  context.py
src/shadow_pa/ingest/: __init__.py  calendar.py  cursor.py  email.py  lifecycle.py  search.py  server_common.py  server_models.py  whatsapp.py  wikipedia.py
src/shadow_pa/learning/: __init__.py  chat_log.py  export.py
src/shadow_pa/llm/: __init__.py  ollama.py
src/shadow_pa/memory/: __init__.py  models.py  review.py  store.py
src/shadow_pa/server/: __init__.py  app.py  auth.py  scheduler.py
src/shadow_pa/shadow/: __init__.py  extractor.py  offline.py
src/shadow_pa/tracking/: __init__.py
src/shadow_pa/utils/: __init__.py  redact.py
tests/: test_agents.py  test_api.py  test_books.py  test_chat_memory.py  test_clear_source.py  test_config_paths.py  test_config_store.py  test_context.py  test_core.py  test_credentials.py  test_export.py  test_firecrawl.py  test_job.py  test_manifest.py  test_ollama.py  test_queue.py  test_review.py  test_server.py  test_shell.py  test_trainer.py  test_websearch.py
ui/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
ui/src/: App.tsx  api.ts  index.scss  main.tsx  styles.css
ui/src/components/: AppShell.tsx  MarkdownContent.tsx  PageHeader.tsx  PersonaSettingsPanels.tsx
ui/src/components/ui/: Button.tsx  Card.tsx  CodeBlock.tsx  Dialog.tsx  EmptyState.tsx  Input.tsx  ScrollArea.tsx  Select.tsx  Spinner.tsx  Switch.tsx  Table.tsx  Tabs.tsx  Tag.tsx  Toast.tsx
ui/src/pages/: Books.tsx  Chat.tsx  Dashboard.tsx  Ingest.tsx  Memory.tsx  Policies.tsx  Review.tsx  Server.tsx  Tools.tsx
