[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shadow-pa"
version = "0.1.0"
description = "Local personal assistant with memory, WhatsApp shadowing, and privacy-first learning"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Nikhil" }]
keywords = ["personal-assistant", "memory", "local-llm", "whatsapp", "learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pyyaml>=6.0.1",
    "rich>=13.7.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]
corpus = [
    "datasets>=2.19.0",
]
ui = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[project.scripts]
shadow-pa = "shadow_pa.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/shadow_pa"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/config",
    "/memory",
    "/data",
    "/README.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
